Provides a workaround for byte <-> char conversion based on bad charset.
Commit 6d78664 introduced an issue where WUIC inserts wrong characters in the transformed string when converting bytes into char based on a bad charset. Generally the charset will be incorrect if the user does not define the charset explicitly. WUIC applies UTF-8 by default while most of the time the correct charset will be the default platform charset. WUIC now uses the default platform charset if the user does not set a charset explicitly. Since it's a bad practice (behavior is platform dependent), a warning message has been added when the default charset is used and the API documentation indicates to the user that he should take care of that. This commit does not modify core engines, it must be done in a future commit.

--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -606,6 +606,12 @@ Find description of each property http://wuic.github.io/apidocs/constant-values.
 include::{table-repository}com.github.wuic.engine.html[]
 ++++
 
+IMPORTANT: by default the charset is an empty string.
+In that case, WUIC will use `Charset.defaultCharset()` to retrieve a valid value.
+This means that by default the charset is platform dependent.
+Define explicitly a a value in your configuration file let WUIC consider the same charset across different environment.
+Another solution is to define the system property `file.encoding` in the JVM settings of each environment where WUIC is running.
+
 === Configuring the NutDao
 
 There are several ways to access resources:
