--- a/src/main/asciidoc/advanced-tutorials.adoc
+++ b/src/main/asciidoc/advanced-tutorials.adoc
@@ -182,7 +182,7 @@ You will find a lot of helpers in the javadoc:
 Each engine and DAO needs to be configured differently so your class may expose a constructor expecting several parameters.
 You need in that case to rely on http://wuic.github.io/apidocs/com/github/wuic/config/package-summary.html[com.github.wuic.config] package which contains:
 
-* `@ConfigConstructor` annotation for you constructor
+* `@Config` annotation for you constructor / initialization method
 * Annotations for each parameter regarding their type: `String`, `Integer`, `Boolean` or more global `Object`
 
 For instance, an engine compressing nuts will looks like this:
@@ -191,6 +191,9 @@ For instance, an engine compressing nuts will looks like this:
 ----
 include::{wuic-repository}wuic/core/src/test/java/com/github/wuic/test/ApiTutorial.java[tags=EngineService]
 ----
+
+INFORMATION: if you provide a default constructor that is not annotated with `@Config`, WUIC will use it if not other valid
+constructor correctly annotated has been found. Also note that any method correctly annotated will be executed after the instantiation.
 
 http://wuic.github.io/apidocs/com/github/wuic/ApplicationConfig.html[ApplicationConfig] already contains a lot of configuration keys that you can reuse.
 This is required to let WUIC build the object for you regarding the properties provided in `XML` or `Java Config`.
