--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -610,12 +610,6 @@ Find description of each property http://wuic.github.io/apidocs/constant-values.
 include::{table-repository}com.github.wuic.engine.html[]
 ++++
 
-IMPORTANT: by default the charset is an empty string.
-In that case, WUIC will use `Charset.defaultCharset()` to retrieve a valid value.
-This means that by default the charset is platform dependent.
-Define explicitly a a value in your configuration file let WUIC consider the same charset across different environment.
-Another solution is to define the system property `file.encoding` in the JVM settings of each environment where WUIC is running.
-
 === Configuring the NutDao
 
 There are several ways to access resources:
@@ -758,7 +752,6 @@ Note: you can use as `param-value` the `${myProperty:myDefaultValue}` notation t
 In the example above, if the `myProperty` is not found then the `myDefaultValue` will be applied.
 Specifying a default value is optional, meaning you can write `${myProperty}`.
 
-
 *Note for those who don't want to use init-param:*
 you will see the particular `c.g.wuic.initParameterClass` `init-param` in the table below.
 If you want to provide parameters in a different way, specify an implementation of `com.github.wuic.util.PropertyResolver`.
@@ -829,6 +822,17 @@ In the `Parameter name` column bellow, replace the first `*` character from all 
          <td>*.facade.wuicWarmupStrategy</td>
          <td>When a context is built, a warmup strategy could be specified run all known workflows asynchronously (`ASYNC`), synchronously (`SYNC`) or not (`NONE`)</td>
          <td>NONE</td>
+    </tr>
+    <tr>
+         <td>*.charset</td>
+         <td>
+            Charset used by WUIC when reading/writing files.
+            By default the charset is an empty string.
+            In that case, WUIC will use <code>Charset.defaultCharset()</code> to retrieve a valid value.
+            This means that by default the charset is platform dependent.
+            Define explicitly a a value in your configuration file let WUIC consider the same charset across different environment.
+            Another solution is to define the system property <code>file.encoding</code> in the JVM settings of each environment where WUIC is running.</td>
+         <td>Empty string</td>
     </tr>
     <tr>
          <td>*.initParameterClass</td>
